--- a/Titlebar Enabled/userChrome.css
+++ b/Titlebar Enabled/userChrome.css
@@ -985,7 +985,7 @@ toolbar .toolbarbutton-1:not(#back-button):not(#forward-button):not(#reload-butt
     border-top: 1px solid #292929 !important;
 	border-bottom: 1px solid rgb(36, 38, 39) !important;
 }
-.tab-background[selected="true"]:-moz-lwtheme-brighttext:-moz-window-inactive {
+.tab-background:is([selected], [multiselected]):-moz-lwtheme-brighttext:-moz-window-inactive {
 	background: rgb(51,51,51) !important;
 	border: 1px solid rgba(45,45,45,1) !important;
 }
@@ -1050,7 +1050,7 @@ toolbar .toolbarbutton-1:not(#back-button):not(#forward-button):not(#reload-butt
     border-top: 1px solid #1D1D1D !important;
 	border-bottom: 1px solid rgb(36, 38, 39) !important;
 }
-.tab-background[selected="true"]:-moz-lwtheme-brighttext {
+.tab-background:is([selected], [multiselected]):-moz-lwtheme-brighttext {
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.08), inset 0 -1px 0 0 rgba(255,255,255,0.05) !important;
     border: 1px solid rgba(40,40,40,1) !important;
 	background: #3A3A3A !important;
@@ -1251,7 +1251,7 @@ toolbar .toolbarbutton-1[data-extensionid]:-moz-any([open], [checked], :active):
 #searchbar:not([focused="true"]):-moz-window-inactive {
     border: 1px solid #282828 !important;
 }
-.tab-background[selected="true"]:-moz-window-inactive {
+.tab-background:is([selected], [multiselected]):-moz-window-inactive {
 	background:  rgb(51,51,51) !important;
 	border: 1px solid rgba(45,45,45,1) !important;
 }
@@ -1330,7 +1330,7 @@ toolbar .toolbarbutton-1[data-extensionid]:-moz-any([open], [checked], :active):
     border-top: 1px solid #1D1D1D !important;
 	border-bottom: 1px solid rgb(36, 38, 39) !important;
 }
-.tab-background[selected="true"] {
+.tab-background:is([selected], [multiselected]) {
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.08), inset 0 -1px 0 0 rgba(255,255,255,0.05) !important;
     border: 1px solid rgba(40,40,40,1) !important;
 	background: #3A3A3A !important;
@@ -1626,7 +1626,7 @@ private browsing
     border-top: 1px solid rgba(0,0,0,0.4) !important;
     border-bottom: 1px solid rgba(0,0,0,0.2) !important;
 }
-#main-window[privatebrowsingmode="temporary"] .tab-background[selected="true"] {
+#main-window[privatebrowsingmode="temporary"] .tab-background:is([selected], [multiselected]) {
     background: rgba(255,255,255,0.25) !important;
     border: 1px solid rgba(0,0,0,0.4) !important;
 }
